# kennyfasa_bk_backend

./: .gitignore  main.py  pyproject.toml  requirements.txt  seed_products.py  seed_users.py
migrations/: env.py
migrations/versions/: 57b1c40b4f33_made_payment_type_optional.py  7916bde9ff59_added_size_id_to_sale_item.py  a5c5bc40e334_add_credit_applied_to_sales.py
src/: __init__.py  config.py
src/analytics/: routes.py  schemas.py  services.py
src/auth/: models.py  routes.py  schemas.py  services.py
src/customers/: models.py  routes.py  schemas.py  services.py
src/db/: main.py  redis.py
src/payments/: models.py  routes.py  schemas.py  services.py
src/products/: extracted_prices.py  models.py  routes.py  schemas.py  services.py
src/sales/: models.py  routes.py  schemas.py  services.py
src/utils/: auth.py  limiter.py  pagination.py
